--- a/ui5.yaml
+++ b/ui5.yaml
@@ -2,6 +2,18 @@ specVersion: '2.6'
 metadata:
   name: 000-ui5-template
 type: application
+builder:
+  customTasks:
+  - name: ui5-task-transpile
+    afterTask: replaceVersion
+    configuration:
+      debug: true
+      removeConsoleStatements: true
+      transpileAsync: true
+      excludePatterns:
+      - "lib/"
+      - "another/dir/in/webapp"
+      - "yet/another/dir"
 framework:
   name: SAPUI5
   version: "1.96.1"
