--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "description": "Before we start with our development or download and installation of the project, remember this template can help as a point to start!.",
   "devDependencies": {
     "eslint": "^8.3.0",
+    "ui5-middleware-livereload": "^0.5.8",
+    "ui5-middleware-simpleproxy": "^0.7.5",
     "ui5-task-transpile": "^0.3.4"
   },
   "keywords": [
@@ -26,6 +28,7 @@
   },
   "ui5": {
     "dependencies": [
+      "ui5-middleware-livereload",
       "ui5-task-transpile"
     ]
   },
