--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "devDependencies": {
     "eslint": "^8.3.0",
     "ui5-middleware-livereload": "^0.5.8",
-    "ui5-middleware-simpleproxy": "^0.7.5",
+    "ui5-middleware-simpleproxy": "*",
     "ui5-task-transpile": "^0.3.4"
   },
   "keywords": [
@@ -29,6 +29,7 @@
   "ui5": {
     "dependencies": [
       "ui5-middleware-livereload",
+      "ui5-middleware-simpleproxy",
       "ui5-task-transpile"
     ]
   },
