--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -8,6 +8,16 @@
       "description": "{{appDescription}}",
       "applicationVersion": {
         "version": "1.0.0"
+      },
+      "dataSources": {
+        "mainService": {
+          "uri": "/Northwind/V2/Northwind/Northwind.svc",
+          "type": "OData",
+          "settings": {
+            "odataVersion": "2.0",
+            "localUri": "localService/metadata.xml"
+          }
+        }
       }
     },
     "sap.ui": {
@@ -32,6 +42,9 @@
         }
       },
       "models": {
+        "": {
+          "dataSource": "mainService"
+        },
         "i18n": {
           "type": "sap.ui.model.resource.ResourceModel",
           "settings": {
