--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -15,7 +15,7 @@
           "type": "OData",
           "settings": {
             "odataVersion": "2.0",
-            "localUri": "localService/metadata.xml"
+            "localUri": "/localService/metadata.xml"
           }
         }
       }
