--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -48,9 +48,7 @@
         "i18n": {
           "type": "sap.ui.model.resource.ResourceModel",
           "settings": {
-            "bundleName": "sap.ui.demo.template.i18n.i18n",
-            "supportedLocales": [""],
-            "fallbackLocale": ""
+            "bundleName": "sap.ui.demo.template.i18n.i18n"
           }
         }
       },
@@ -81,14 +79,24 @@
             "pattern": "",
             "name": "main",
             "target": ["main"]
+          },
+          {
+            "pattern": "detail/{ProductID}",
+            "name": "detail",
+            "target": ["detail"]
           }
+
         ],
         "targets": {
           "main": {
-            "viewName": "main",
+            "viewName": "Main",
             "viewId": "main",
             "viewLevel": 1,
             "title": "{i18n>title}"
+          },
+          "detail": {
+            "viewName": "Detail",
+            "viewId": "detail"
           }
         }
       }
