--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -38,7 +38,10 @@
         "libs": {
           "sap.m": {},
           "sap.ui.core": {},
-          "sap.ui.layout": {}
+          "sap.ui.layout": {},
+          "sap.ui.library.reuse": {
+            "lazy":  true
+          }
         }
       },
       "models": {
